// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EU - Link Default - link default renders correctly 1`] = `
"<a href=\\"/path\\" class=\\"ecl-link ecl-link--default\\"></a>
"
`;

exports[`EU - Link Standalone - link standalone renders correctly 1`] = `
"<a href=\\"/path\\" class=\\"ecl-link ecl-link--standalone\\"></a>
"
`;

exports[`EU - Link With icon after - link with icon renders correctly 1`] = `
"<a
  href=\\"/path\\"
  class=\\"ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after\\"
  ><span class=\\"ecl-link__label\\"></span
></a>
"
`;

exports[`EU - Link With icon before - link with icon renders correctly 1`] = `
"<a
  href=\\"/path\\"
  class=\\"ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
  ><span class=\\"ecl-link__label\\"></span
></a>
"
`;
